@@ -1,1 +1,2 @@
 -Xmx192m -XX:+HeapDumpOnOutOfMemoryError -XX:+TieredCompilation -XX:TieredStopAtLevel=1
+--add-opens java.base/sun.nio.ch=ALL-UNNAMED
